--- a/skel/picom/picom.conf
+++ b/skel/picom/picom.conf
@@ -21,7 +21,7 @@ rounded-corners-exclude = [
   "class_g = 'dwm'",
   "class_g = 'dmenu'",
   "class_g = 'Dunst'",
-  "class_g = 'XTerm'",
+  "class_g = 'Rofi'",
   "class_g = 'kitty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
